syntax = "proto3";
package db.job;

// 测试用的proto定义

option java_package = "org.protoframework.core.proto.data";
option java_outer_classname = "TestModel";


message MsgA {
  int32 int32 = 1;
  int64 int64 = 2;
  float float = 3;
  double double = 4;
  bool bool = 5;
  string string = 6;
  bytes bytes = 7;
  EnumA enuma = 8;
  MsgB msgb = 9;

  repeated int32 int32_arr = 11;
  repeated int64 int64_arr = 12;
  repeated float float_arr = 13;
  repeated double double_arr = 14;
  repeated bool bool_arr = 15;
  repeated string string_arr = 16;
  repeated bytes bytes_arr = 17;
  repeated EnumA enuma_arr = 18;
  repeated MsgB msgb_arr = 19;

  map<string, int32> int32_map = 21;
  map<string, int64> int64_map = 22;
  map<string, float> float_map = 23;
  map<string, double> double_map = 24;
  map<int32, bool> bool_map = 25;
  map<string, string> string_map = 26;
  map<string, bytes> bytes_map = 27;
  map<string, EnumA> enuma_map = 28;
  map<string, MsgB> msgb_map = 29;
}

enum EnumA {
  EA0 = 0;
  EA1 = 1;
  EA2 = 2;
}

message MsgB {
  string id = 1;
}
